[package]
name = "ethercat-parser"
version = "1.0.0"
edition = "2021"
authors = ["Industrial Automation Team"]
description = "EtherCAT packet parser for industrial automation production line maintenance"
license = "MIT"

[[bin]]
name = "ethercat-parser"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
byteorder = "1.5"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
csv = "1.3"

[dev-dependencies]
tempfile = "3.10"
rand = "0.8"
